fix: обновил z-index в блоке cover

--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -12,6 +12,7 @@
   text-align: center;
   min-height: 720px;
   width: 100%;
+  z-index: 1;
 }
 
 .cover__overlay::before {
@@ -21,6 +22,7 @@
   top: 0;
   right: 0;
   bottom: 0;
+  z-index: -1;
   background: #2A2C2F;
   opacity: .3;
   transition: .5s ease-in-out;
