--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,7 +6,6 @@
   color: #fff;
   max-width: 360px;
   margin: 32px 0 0;
-  z-index: 1;
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
