--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,7 +6,6 @@
   color: #fff;
   max-width: 560px;
   margin: 0;
-  z-index: 1;
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
